Added user profile page

--- a/PharmacyVSTU/ClientApp/src/assets/css/auth.css
+++ b/PharmacyVSTU/ClientApp/src/assets/css/auth.css
@@ -317,6 +317,26 @@ display-flex, .display-flex, .display-flex-center, .signup-content, .signin-cont
     overflow: hidden; }
     .form-group:last-child {
       margin-bottom: 0px; }
+
+      .custom-checkbox+label {
+        display: inline-flex;
+        align-items: center;
+        user-select: none;
+      }
+      .custom-checkbox+label::before {
+        content: '';
+        display: inline-block;
+        width: 1em;
+        height: 1em;
+        flex-shrink: 0;
+        flex-grow: 0;
+        border: 1px solid #adb5bd;
+        border-radius: 0.25em;
+        margin-right: 0.5em;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: 50% 50%;
+      }
   
   input {
     width: 100%;
@@ -346,11 +366,12 @@ display-flex, .display-flex, .display-flex-center, .signup-content, .signin-cont
         color: #222; }
   
   input[type=checkbox]:not(old) {
-    width: 2em;
+    left: 0;
+    top: 50%;
     margin: 0;
     padding: 0;
     font-size: 1em;
-    display: none; }
+  }
   
   input[type=checkbox]:not(old) + label {
     display: inline-block;
