--- a/PharmacyVSTU/ClientApp/src/assets/css/loader.css
+++ b/PharmacyVSTU/ClientApp/src/assets/css/loader.css
@@ -3,11 +3,12 @@
     position: relative;
     width: 80px;
     height: 80px;
+    opacity: 1 !important;
   }
   .at-center {
       position: absolute;
       top: 40%;
-      left: 50%;
+      left: 47%;
   }
   .lds-roller div {
     animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
