--- a/PharmacyVSTU/ClientApp/src/assets/css/pageTranslation.css
+++ b/PharmacyVSTU/ClientApp/src/assets/css/pageTranslation.css
@@ -6,22 +6,22 @@
   
   .page-enter {
     opacity: 0;
-    transform: scale(1.1);
+    transform: translateY(20%);
   }
   
   .page-enter-active {
     opacity: 1;
-    transform: scale(1);
+    transform: translateY(0%);
     transition: opacity 300ms, transform 300ms;
   }
   
   .page-exit {
     opacity: 1;
-    transform: scale(1);
+    transform: scale(1) translateX(0%);
   }
   
   .page-exit-active {
     opacity: 0;
-    transform: scale(0.9);
+    transform: scale(0.9) translateY(-20%);
     transition: opacity 300ms, transform 300ms;
   }
